@@ -25,16 +25,18 @@ import java.io.OutputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.vfs2.FileObject;
 import org.apache.hop.core.Const;
 import org.apache.hop.core.IRunnableWithProgress;
@@ -55,6 +57,7 @@ import org.apache.hop.core.variables.IVariables;
 import org.apache.hop.core.variables.Variables;
 import org.apache.hop.core.vfs.HopVfs;
 import org.apache.hop.history.AuditEvent;
+import org.apache.hop.history.AuditList;
 import org.apache.hop.history.AuditManager;
 import org.apache.hop.i18n.BaseMessages;
 import org.apache.hop.metadata.api.IHopMetadataProvider;
@@ -62,6 +65,7 @@ import org.apache.hop.metadata.api.IHopMetadataSerializer;
 import org.apache.hop.pipeline.config.PipelineRunConfiguration;
 import org.apache.hop.pipeline.engines.local.LocalPipelineRunConfiguration;
 import org.apache.hop.projects.config.ProjectsConfig;
+import org.apache.hop.projects.config.ProjectsConfigOptionPlugin;
 import org.apache.hop.projects.config.ProjectsConfigSingleton;
 import org.apache.hop.projects.environment.LifecycleEnvironment;
 import org.apache.hop.projects.environment.LifecycleEnvironmentDialog;
@@ -73,25 +77,32 @@ import org.apache.hop.ui.core.FormDataBuilder;
 import org.apache.hop.ui.core.PropsUi;
 import org.apache.hop.ui.core.bus.HopGuiEvents;
 import org.apache.hop.ui.core.dialog.BaseDialog;
+import org.apache.hop.ui.core.dialog.EnterSelectionDialog;
 import org.apache.hop.ui.core.dialog.ErrorDialog;
 import org.apache.hop.ui.core.dialog.MessageBox;
 import org.apache.hop.ui.core.dialog.ProgressMonitorDialog;
+import org.apache.hop.ui.core.gui.GuiMenuWidgets;
 import org.apache.hop.ui.core.gui.GuiResource;
 import org.apache.hop.ui.core.gui.GuiToolbarWidgets;
 import org.apache.hop.ui.core.gui.HopNamespace;
 import org.apache.hop.ui.core.vfs.HopVfsFileDialog;
 import org.apache.hop.ui.core.widget.FileTree;
 import org.apache.hop.ui.hopgui.HopGui;
+import org.apache.hop.ui.hopgui.perspective.execution.ExecutionPerspective;
+import org.apache.hop.ui.hopgui.perspective.explorer.ExplorerPerspective;
 import org.apache.hop.ui.pipeline.dialog.PipelineExecutionConfigurationDialog;
 import org.apache.hop.ui.pipeline.transform.BaseTransformDialog;
 import org.apache.hop.workflow.config.WorkflowRunConfiguration;
 import org.apache.hop.workflow.engines.local.LocalWorkflowRunConfiguration;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.graphics.Point;
+import org.eclipse.swt.graphics.Rectangle;
 import org.eclipse.swt.layout.FormLayout;
 import org.eclipse.swt.widgets.Button;
-import org.eclipse.swt.widgets.Combo;
 import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Label;
+import org.eclipse.swt.widgets.Menu;
+import org.eclipse.swt.widgets.MenuItem;
 import org.eclipse.swt.widgets.Shell;
 
 @GuiPlugin
@@ -99,17 +110,31 @@ public class ProjectsGuiPlugin {
 
   public static final Class<?> PKG = ProjectsGuiPlugin.class; // i18n
 
-  public static final String ID_TOOLBAR_PROJECT_LABEL = "toolbar-40000-project-label";
-  public static final String ID_TOOLBAR_PROJECT_COMBO = "toolbar-40010-project-list";
-  public static final String ID_TOOLBAR_PROJECT_EDIT = "toolbar-40020-project-edit";
-  public static final String ID_TOOLBAR_PROJECT_ADD = "toolbar-40030-project-add";
-  public static final String ID_TOOLBAR_PROJECT_DELETE = "toolbar-40040-project-delete";
+  private static final String LAST_USED_PROJECTS_AUDIT_TYPE = "last-projects";
+  private static final int LAST_USED_PROJECTS_MAX_ENTRIES = 15;
 
-  public static final String ID_TOOLBAR_ENVIRONMENT_LABEL = "toolbar-50000-environment-label";
-  public static final String ID_TOOLBAR_ENVIRONMENT_COMBO = "toolbar-50010-environment-list";
-  public static final String ID_TOOLBAR_ENVIRONMENT_EDIT = "toolbar-50020-environment-edit";
-  public static final String ID_TOOLBAR_ENVIRONMENT_ADD = "toolbar-50030-environment-add";
-  public static final String ID_TOOLBAR_ENVIRONMENT_DELETE = "toolbar-50040-environment-delete";
+  public static final String ID_TOOLBAR_ITEM_PROJECT = "toolbar-item-10000-project";
+  public static final String ID_CONTEXT_MENU_PROJECT = "context-menu-project";
+  public static final String ID_CONTEXT_MENU_PROJECT_ADD = "context-menu-project-40010-add";
+  public static final String ID_CONTEXT_MENU_PROJECT_ADD_FROM_VC =
+      "context-menu-project-40011-add-from-vc";
+  public static final String ID_CONTEXT_MENU_PROJECT_ADD_FROM_EXISTING =
+      "context-menu-project-40012-add-from-existing";
+  public static final String ID_CONTEXT_MENU_PROJECT_ADD_FROM_TEMPLATE =
+      "context-menu-project-40013-add-from-template";
+  public static final String ID_CONTEXT_MENU_PROJECT_EDIT = "context-menu-project-40020-edit";
+  public static final String ID_CONTEXT_MENU_PROJECT_DELETE = "context-menu-project-40030-delete";
+
+  public static final String ID_TOOLBAR_ITEM_ENVIRONMENT = "toolbar-item-20000-environment";
+  public static final String ID_CONTEXT_MENU_ENVIRONMENT = "context-menu-environment";
+  public static final String ID_CONTEXT_MENU_ENVIRONMENT_ADD = "context-menu-environment-50010-add";
+  public static final String ID_CONTEXT_MENU_ENVIRONMENT_EDIT =
+      "context-menu-environment-50020-edit";
+  public static final String ID_CONTEXT_MENU_ENVIRONMENT_DUPLICATE =
+      "context-menu-environment-50030-duplicate";
+
+  public static final String ID_CONTEXT_MENU_ENVIRONMENT_DELETE =
+      "context-menu-environment-50040-delete";
 
   public static final String ID_MAIN_MENU_PROJECT_EXPORT = "10055-menu-file-export-to-svg";
 
@@ -118,8 +143,9 @@ public class ProjectsGuiPlugin {
       "0005-navigate-project-home"; // right next to Home button
 
   FileTree tree;
+  private static List<String> lastUsedProjects;
 
-  /** Automatically instantiated when the toolbar widgets etc need it */
+  /** Automatically instantiated when the toolbar widgets need it */
   public ProjectsGuiPlugin() {
     // Do nothing
   }
@@ -141,8 +167,19 @@ public class ProjectsGuiPlugin {
       }
 
       // Close's all
-
+      //
       hopGui.fileDelegate.closeAllFiles();
+
+      // Clear all terminal tabs (saves current project's terminals first)
+      //
+      if (hopGui.getTerminalPanel() != null) {
+        hopGui.getTerminalPanel().clearAllTerminals();
+      }
+
+      // Save explorer perspective state for the current project before switching namespace
+      //
+      ExplorerPerspective.getInstance().saveExplorerStateOnShutdown();
+      ExecutionPerspective.getInstance().saveState();
 
       // This is called only in Hop GUI so we want to start with a new set of variables
       // It avoids variables from one project showing up in another
@@ -186,8 +223,13 @@ public class ProjectsGuiPlugin {
       hopGui.setVariables(variables);
 
       // Re-open last open files for the namespace
+      hopGui.getDisplay().asyncExec(() -> hopGui.auditDelegate.openLastFiles());
+
+      // Restore terminal tabs for the new project (per-project terminals)
       //
-      hopGui.auditDelegate.openLastFiles();
+      if (hopGui.getTerminalPanel() != null && hopGui.getProps().openLastFile()) {
+        hopGui.getDisplay().asyncExec(() -> hopGui.getTerminalPanel().restoreTerminals());
+      }
 
       // Clear last used, fill it with something useful.
       //
@@ -202,12 +244,16 @@ public class ProjectsGuiPlugin {
 
       // Refresh the currently active file
       //
-      hopGui.getActivePerspective().getActiveFileTypeHandler().updateGui();
+      hopGui.getActiveFileTypeHandler().updateGui();
 
-      // Update the toolbar combos
+      // Remember the last used projects for the toolbar
       //
-      ProjectsGuiPlugin.selectProjectInList(projectName);
-      ProjectsGuiPlugin.selectEnvironmentInList(environment == null ? null : environment.getName());
+      rememberLastUsedProjects(projectName);
+
+      // Update the toolbar items
+      //
+      updateProjectToolItem(projectName);
+      updateEnvironmentToolItem(environmentName);
 
       // Also add this as an event so we know what the project usage history is
       //
@@ -220,11 +266,6 @@ public class ProjectsGuiPlugin {
               new Date());
       AuditManager.getActive().storeEvent(prjUsedEvent);
 
-      // Now use that event to refresh the list...
-      //
-      refreshProjectsList();
-      ProjectsGuiPlugin.selectProjectInList(projectName);
-
       if (environment != null) {
         // Also add this as an event so we know what the project usage history is
         //
@@ -232,10 +273,17 @@ public class ProjectsGuiPlugin {
             new AuditEvent(
                 ProjectsUtil.STRING_PROJECTS_AUDIT_GROUP,
                 ProjectsUtil.STRING_ENVIRONMENT_AUDIT_TYPE,
-                environment.getName(),
+                environmentName,
                 "open",
                 new Date());
         AuditManager.getActive().storeEvent(envUsedEvent);
+      }
+
+      // Restore the state of the execution perspective as well
+      //
+      ExecutionPerspective.getInstance().restoreState();
+      if (ExecutionPerspective.getInstance().isActive()) {
+        ExecutionPerspective.getInstance().refresh();
       }
 
       // Send out an event notifying that a new project is activated...
@@ -254,84 +302,201 @@ public class ProjectsGuiPlugin {
 
       // Reset VFS filesystem to load additional configurations
       HopVfs.reset();
-
     } catch (Exception e) {
+      MissingProjectInfo missing = extractMissingProjectInfo(e);
+      if (missing != null) {
+        String displayName = missing.projectName != null ? missing.projectName : projectName;
+        MessageBox box = new MessageBox(HopGui.getInstance().getShell(), SWT.OK | SWT.ICON_WARNING);
+        box.setMessage(
+            "Project '"
+                + displayName
+                + "' could not be loaded because "
+                + missing.path
+                + " no longer exists.\n\nYou can update the path in the Project configuration.");
+        box.setText("Project not available");
+        box.open();
+        selectProjectInUiOnly(projectName);
+        return;
+      }
       throw new HopException("Error enabling project '" + projectName + "' in HopGui", e);
     }
   }
 
-  private static Combo getProjectsCombo() {
-    Control control =
-        HopGui.getInstance()
-            .getMainToolbarWidgets()
-            .getWidgetsMap()
-            .get(ProjectsGuiPlugin.ID_TOOLBAR_PROJECT_COMBO);
-    if (control instanceof Combo combo) {
-      return combo;
+  /** Result when the failure is due to a project home folder that does not exist. */
+  public static class MissingProjectInfo {
+    public final String projectName;
+    public final String path;
+
+    public MissingProjectInfo(String projectName, String path) {
+      this.projectName = projectName;
+      this.path = path;
+    }
+  }
+
+  /**
+   * Extracts the project name and path from an exception when the failure is due to "folder does
+   * not exist". Returns null if this is not a missing-folder error.
+   */
+  public static MissingProjectInfo extractMissingProjectInfo(Throwable t) {
+    Pattern withName =
+        Pattern.compile(
+            "Project '([^']+)' home folder '([^']+)' does not exist", Pattern.CASE_INSENSITIVE);
+    Pattern legacy =
+        Pattern.compile("Project home folder '([^']+)' does not exist", Pattern.CASE_INSENSITIVE);
+    while (t != null) {
+      String msg = t.getMessage();
+      if (msg != null) {
+        Matcher matcher = withName.matcher(msg);
+        if (matcher.find()) {
+          return new MissingProjectInfo(matcher.group(1), matcher.group(2));
+        }
+        matcher = legacy.matcher(msg);
+        if (matcher.find()) {
+          return new MissingProjectInfo(null, matcher.group(1));
+        }
+      }
+      t = t.getCause();
     }
     return null;
   }
 
-  private static Combo getEnvironmentsCombo() {
-    Control control =
-        HopGui.getInstance()
-            .getMainToolbarWidgets()
-            .getWidgetsMap()
-            .get(ProjectsGuiPlugin.ID_TOOLBAR_ENVIRONMENT_COMBO);
-    if (control instanceof Combo combo) {
-      return combo;
+  /**
+   * Extracts the project home path from an exception when the failure is due to "folder does not
+   * exist". Returns the path for use in a message, or null if this is not a missing-folder error.
+   */
+  public static String extractMissingProjectPath(Throwable t) {
+    MissingProjectInfo info = extractMissingProjectInfo(t);
+    return info != null ? info.path : null;
+  }
+
+  public static void updateProjectToolItem(String projectName) {
+    GuiToolbarWidgets statusWidgets = HopGui.getInstance().getStatusToolbarWidgets();
+    if (projectName == null || StringUtils.isEmpty(projectName)) {
+      statusWidgets.setToolbarItemText(ID_TOOLBAR_ITEM_PROJECT, "");
+      statusWidgets.setToolbarItemToolTip(
+          ID_TOOLBAR_ITEM_PROJECT,
+          BaseMessages.getString(PKG, "HopGui.Toolbar.Project.Select.Tooltip"));
+      HopNamespace.setNamespace(HopGui.DEFAULT_HOP_GUI_NAMESPACE);
+      return;
     }
-    return null;
-  }
-
-  public static void refreshProjectsList() {
-    HopGui.getInstance().getMainToolbarWidgets().refreshComboItemList(ID_TOOLBAR_PROJECT_COMBO);
-  }
-
-  public static void selectProjectInList(String name) {
-    GuiToolbarWidgets toolbarWidgets = HopGui.getInstance().getMainToolbarWidgets();
     ProjectsConfig config = ProjectsConfigSingleton.getConfig();
+    ProjectConfig projectConfig = config.findProjectConfig(projectName);
+    if (projectConfig != null) {
+      String projectHome = projectConfig.getProjectHome();
+      if (StringUtils.isNotEmpty(projectHome)) {
+        statusWidgets.setToolbarItemText(ID_TOOLBAR_ITEM_PROJECT, projectName);
+        statusWidgets.setToolbarItemToolTip(
+            ID_TOOLBAR_ITEM_PROJECT,
+            BaseMessages.getString(
+                PKG,
+                "HopGui.Toolbar.Project.Tooltip",
+                projectName,
+                projectHome,
+                projectConfig.getConfigFilename()));
+      } else {
+        statusWidgets.setToolbarItemText(ID_TOOLBAR_ITEM_PROJECT, projectName);
+        statusWidgets.setToolbarItemToolTip(
+            ID_TOOLBAR_ITEM_PROJECT, projectName + " (path not set - use Edit to configure)");
+      }
+    }
+  }
 
-    toolbarWidgets.selectComboItem(ID_TOOLBAR_PROJECT_COMBO, name);
-    Combo combo = getProjectsCombo();
-    if (combo != null) {
-      ProjectConfig projectConfig = config.findProjectConfig(name);
-      if (projectConfig != null) {
-        String projectHome = projectConfig.getProjectHome();
-        if (StringUtils.isNotEmpty(projectHome)) {
-          combo.setToolTipText(
-              BaseMessages.getString(
-                  PKG,
-                  "ProjectGuiPlugin.SelectProject.Tooltip",
-                  name,
-                  projectHome,
-                  projectConfig.getConfigFilename()));
+  /**
+   * Selects a project in the UI only (toolbar + namespace) without loading it. Use when the project
+   * failed to load so the user can still Edit or Delete it.
+   */
+  private static void selectProjectInUiOnly(String projectName) {
+    if (StringUtils.isEmpty(projectName)) {
+      return;
+    }
+    GuiToolbarWidgets statusWidgets = HopGui.getInstance().getStatusToolbarWidgets();
+    statusWidgets.setToolbarItemText(ID_TOOLBAR_ITEM_PROJECT, projectName);
+    statusWidgets.setToolbarItemToolTip(
+        ID_TOOLBAR_ITEM_PROJECT,
+        projectName + " (could not be loaded - use Edit to fix the path, or Delete to remove)");
+    HopNamespace.setNamespace(projectName);
+    updateEnvironmentToolItem("");
+  }
+
+  private static void updateEnvironmentToolItem(String environmentName) {
+    GuiToolbarWidgets statusWidgets = HopGui.getInstance().getStatusToolbarWidgets();
+    if (Utils.isEmpty(environmentName)) {
+      statusWidgets.setToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT, "");
+      statusWidgets.setToolbarItemToolTip(
+          ID_TOOLBAR_ITEM_ENVIRONMENT,
+          BaseMessages.getString(PKG, "HopGui.Toolbar.Environment.Select.Tooltip"));
+      return;
+    }
+
+    ProjectsConfig config = ProjectsConfigSingleton.getConfig();
+    LifecycleEnvironment environment = config.findEnvironment(environmentName);
+    if (environment != null) {
+      statusWidgets.setToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT, environmentName);
+      statusWidgets.setToolbarItemToolTip(
+          ID_TOOLBAR_ITEM_ENVIRONMENT,
+          BaseMessages.getString(
+              PKG,
+              "HopGui.Toolbar.Environment.Tooltip",
+              environmentName,
+              environment.getProjectName(),
+              environment.getPurpose()));
+    }
+  }
+
+  public static List<String> getLastUsedProjects() {
+    // Initialize the list of last used projects (defensive: one failing entry does not break the
+    // list)
+    if (lastUsedProjects == null) {
+      List<String> allProjectNames = ProjectsConfigSingleton.getConfig().listProjectConfigNames();
+      lastUsedProjects = new LinkedList<>();
+      if (allProjectNames == null) {
+        allProjectNames = new ArrayList<>();
+      }
+      try {
+        AuditList auditList =
+            AuditManager.getActive()
+                .retrieveList(HopGui.DEFAULT_HOP_GUI_NAMESPACE, LAST_USED_PROJECTS_AUDIT_TYPE);
+
+        if (auditList != null && auditList.getNames() != null) {
+          for (String name : auditList.getNames()) {
+            if (StringUtils.isNotEmpty(name) && allProjectNames.contains(name)) {
+              lastUsedProjects.add(name);
+            }
+          }
+        }
+      } catch (Exception e) {
+        LogChannel.GENERAL.logError("Error loading last used projects", e);
+        int end = Math.min(LAST_USED_PROJECTS_MAX_ENTRIES, allProjectNames.size());
+        if (end > 0) {
+          lastUsedProjects.addAll(allProjectNames.subList(0, end));
         }
       }
     }
+
+    return lastUsedProjects;
   }
 
-  public static void refreshEnvironmentsList() {
-    HopGui.getInstance().getMainToolbarWidgets().refreshComboItemList(ID_TOOLBAR_ENVIRONMENT_COMBO);
-  }
+  /** Remember the last used projects */
+  public static void rememberLastUsedProjects(String projectName) {
 
-  public static void selectEnvironmentInList(String name) {
-    GuiToolbarWidgets toolbarWidgets = HopGui.getInstance().getMainToolbarWidgets();
+    // Initialize
+    getLastUsedProjects();
 
-    toolbarWidgets.selectComboItem(ID_TOOLBAR_ENVIRONMENT_COMBO, name);
-    Combo combo = getEnvironmentsCombo();
-    if (combo != null) {
-      ProjectsConfig config = ProjectsConfigSingleton.getConfig();
-      LifecycleEnvironment environment = config.findEnvironment(name);
-      if (environment != null) {
-        combo.setToolTipText(
-            BaseMessages.getString(
-                PKG,
-                "ProjectGuiPlugin.FindEnvironment.Tooltip",
-                name,
-                environment.getProjectName(),
-                environment.getPurpose()));
-      }
+    // Keep only a limited number of last-used projects
+    lastUsedProjects.remove(projectName);
+    lastUsedProjects.addFirst(projectName);
+    if (lastUsedProjects.size() > LAST_USED_PROJECTS_MAX_ENTRIES) {
+      lastUsedProjects = lastUsedProjects.subList(0, LAST_USED_PROJECTS_MAX_ENTRIES);
+    }
+
+    // Write the audit list of last used projects
+    try {
+      AuditList auditList = new AuditList(lastUsedProjects);
+      AuditManager.getActive()
+          .storeList(HopGui.DEFAULT_HOP_GUI_NAMESPACE, LAST_USED_PROJECTS_AUDIT_TYPE, auditList);
+    } catch (Exception e) {
+      LogChannel.GENERAL.logError(
+          "Error writing list of last used projects " + LAST_USED_PROJECTS_AUDIT_TYPE, e);
     }
   }
 
@@ -356,35 +521,63 @@ public class ProjectsGuiPlugin {
     if (projectConfig == null) {
       throw new HopException("The project with name '" + projectName + "' could not be found");
     }
-    Project project = projectConfig.loadProject(variables);
-
-    enableHopGuiProject(projectName, project, null);
+    try {
+      Project project = projectConfig.loadProject(variables);
+      enableHopGuiProject(projectName, project, null);
+    } catch (Exception e) {
+      MissingProjectInfo missing = extractMissingProjectInfo(e);
+      if (missing != null) {
+        String displayName = missing.projectName != null ? missing.projectName : projectName;
+        MessageBox box = new MessageBox(hopGui.getShell(), SWT.OK | SWT.ICON_WARNING);
+        box.setMessage(
+            "Project '"
+                + displayName
+                + "' could not be loaded because "
+                + missing.path
+                + " no longer exists.\n\nYou can update the path in the Project configuration.");
+        box.setText("Project not available");
+        box.open();
+        selectProjectInUiOnly(projectName);
+        return;
+      }
+      throw new HopException("Error enabling project '" + projectName + "'", e);
+    }
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_PROJECT_LABEL,
-      type = GuiToolbarElementType.LABEL,
-      label = "i18n::HopGui.Toolbar.Project.Label",
-      toolTip = "i18n::HopGui.Toolbar.Project.Tooltip",
-      separator = true)
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_PROJECT,
+      parentId = ID_CONTEXT_MENU_PROJECT,
+      id = ID_CONTEXT_MENU_PROJECT_EDIT,
+      label = "i18n::HopGui.Toolbar.Project.Edit.Label",
+      toolTip = "i18n::HopGui.Toolbar.Project.Edit.Tooltip",
+      image = "ui/images/edit.svg")
   public void editProject() {
     HopGui hopGui = HopGui.getInstance();
-    Combo combo = getProjectsCombo();
-    if (combo == null) {
-      return;
-    }
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String projectName =
+        hopGui.getStatusToolbarWidgets().getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT);
+
     ProjectsConfig config = ProjectsConfigSingleton.getConfig();
-
-    String projectName = combo.getText();
-
     ProjectConfig projectConfig = config.findProjectConfig(projectName);
     if (projectConfig == null) {
       return;
     }
 
     try {
-      Project project = projectConfig.loadProject(hopGui.getVariables());
+      Project project;
+      try {
+        project = projectConfig.loadProject(hopGui.getVariables());
+      } catch (Exception loadEx) {
+        MissingProjectInfo missing = extractMissingProjectInfo(loadEx);
+        if (missing != null) {
+          // Don't show error again - it was already shown when switching to this project.
+          // Open dialog with empty project so user can fix the path.
+          project = new Project();
+        } else {
+          throw loadEx;
+        }
+      }
+
       String projectFolder = projectConfig.getProjectHome();
 
       ProjectDialog projectDialog =
@@ -407,18 +600,20 @@ public class ProjectsGuiPlugin {
         }
 
         project.saveToFile();
-        refreshProjectsList();
-        selectProjectInList(projectName);
+        updateProjectToolItem(projectName);
 
         if (projectDialog.isNeedingProjectRefresh()) {
           if (askAboutProjectRefresh(hopGui)) {
             // Try to stick to the same environment if we have one selected...
             //
-            LifecycleEnvironment environment = null;
-            Combo environmentsCombo = getEnvironmentsCombo();
-            if (environmentsCombo != null) {
-              environment = config.findEnvironment(environmentsCombo.getText());
-            }
+            String environmentName =
+                HopGui.getInstance()
+                    .getStatusToolbarWidgets()
+                    .getToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT);
+            LifecycleEnvironment environment =
+                StringUtils.isNotEmpty(environmentName)
+                    ? config.findEnvironment(environmentName)
+                    : null;
             enableHopGuiProject(projectConfig.getProjectName(), project, environment);
           }
 
@@ -446,44 +641,198 @@ public class ProjectsGuiPlugin {
   }
 
   @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_PROJECT_COMBO,
-      type = GuiToolbarElementType.COMBO,
-      comboValuesMethod = "getProjectsList",
-      extraWidth = 200,
-      toolTip = "i18n::HopGui.Toolbar.ProjectsList.Tooltip",
-      readOnly = true)
-  public void selectProject() {
-    HopGui hopGui = HopGui.getInstance();
-    ProjectsConfig config = ProjectsConfigSingleton.getConfig();
-
-    Combo projectsCombo = getProjectsCombo();
-    Combo environmentsCombo = getEnvironmentsCombo();
-
-    if (projectsCombo == null) {
-      return;
+      root = HopGui.ID_STATUS_TOOLBAR,
+      id = ID_TOOLBAR_ITEM_PROJECT,
+      type = GuiToolbarElementType.BUTTON,
+      image = "project.svg",
+      toolTip = "i18n::HopGui.Toolbar.Project.Tooltip")
+  public void showProjectContextMenu() {
+    Control control =
+        HopGui.getInstance().getStatusToolbarWidgets().getControlForMenu(ID_TOOLBAR_ITEM_PROJECT);
+    if (control != null && !control.isDisposed()) {
+      Rectangle rect = control.getBounds();
+      int menuGap = 6;
+      Point location =
+          control.getParent().toDisplay(new Point(rect.x, rect.y + rect.height + menuGap));
+      Menu menu = createProjectContextMenu();
+      menu.setLocation(location);
+      menu.setVisible(true);
     }
-    String projectName = projectsCombo.getText();
+  }
 
+  private Menu createProjectContextMenu() {
+    Shell shell = HopGui.getInstance().getActiveShell();
+    Menu menu = new Menu(shell, SWT.POP_UP);
+
+    // Create context menu...
+    //
+    GuiMenuWidgets menuWidgets = new GuiMenuWidgets();
+    menuWidgets.registerGuiPluginObject(this);
+    menuWidgets.createMenuWidgets(ID_CONTEXT_MENU_PROJECT, shell, menu);
+
+    // Enable menus if a project is active.
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String projectText =
+        HopGui.getInstance().getStatusToolbarWidgets().getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT);
+    boolean enabled = !"".equals(projectText);
+    menuWidgets.enableMenuItem(ID_CONTEXT_MENU_PROJECT_EDIT, enabled);
+    menuWidgets.enableMenuItem(ID_CONTEXT_MENU_PROJECT_DELETE, enabled);
+
+    new MenuItem(menu, SWT.SEPARATOR);
+
+    // Display the last-used projects
+    List<String> names = new ArrayList<>(getLastUsedProjects());
+
+    // If the user prefers to display in alphabetical order
+    if (ProjectsConfigOptionPlugin.getInstance().getSortByNameLastUsedProjects()) {
+      names.sort(String::compareToIgnoreCase);
+    }
+
+    String currentProjectName = HopNamespace.getNamespace();
+
+    int count = 0;
+    for (String name : names) {
+      MenuItem item = new MenuItem(menu, SWT.NONE);
+      item.setText(name);
+      item.addListener(SWT.Selection, e -> selectProject(name));
+      if (currentProjectName.equals(name)) {
+        item.setImage(GuiResource.getInstance().getImageCheck());
+      }
+      if (++count == LAST_USED_PROJECTS_MAX_ENTRIES) break;
+    }
+
+    // Add a menu to open a dialog to select it
+    new MenuItem(menu, SWT.SEPARATOR);
+    MenuItem item = new MenuItem(menu, SWT.PUSH);
+    item.setText(BaseMessages.getString(PKG, "HopGui.Toolbar.Project.Select.Tooltip"));
+    item.addListener(SWT.Selection, e -> selectProject());
+
+    return menu;
+  }
+
+  private Menu createEnvironmentContextMenu() {
+    Shell shell = HopGui.getInstance().getActiveShell();
+    Menu menu = new Menu(shell, SWT.POP_UP);
+
+    // Create context menu...
+    //
+    GuiMenuWidgets menuWidgets = new GuiMenuWidgets();
+    menuWidgets.registerGuiPluginObject(this);
+    menuWidgets.createMenuWidgets(ID_CONTEXT_MENU_ENVIRONMENT, shell, menu);
+
+    // Enable menus if an environment is active.
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String environmentText =
+        HopGui.getInstance()
+            .getStatusToolbarWidgets()
+            .getToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT);
+    boolean enabled = !"".equals(environmentText);
+    menuWidgets.enableMenuItem(ID_CONTEXT_MENU_ENVIRONMENT_EDIT, enabled);
+    menuWidgets.enableMenuItem(ID_CONTEXT_MENU_ENVIRONMENT_DUPLICATE, enabled);
+    menuWidgets.enableMenuItem(ID_CONTEXT_MENU_ENVIRONMENT_DELETE, enabled);
+
+    new MenuItem(menu, SWT.SEPARATOR);
+
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String currentProjectName =
+        HopGui.getInstance().getStatusToolbarWidgets().getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT);
+    String currentEnvironmentName =
+        HopGui.getInstance()
+            .getStatusToolbarWidgets()
+            .getToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT);
+
+    // Display list of environments
+    //
+    ProjectsConfig config = ProjectsConfigSingleton.getConfig();
+    List<String> names = config.listEnvironmentNames();
+    for (String name : names) {
+
+      // Exclude environment linked to another project
+      LifecycleEnvironment environment = config.findEnvironment(name);
+      if (environment != null
+          && (Utils.isEmpty(environment.getProjectName())
+              || currentProjectName.equals(environment.getProjectName()))) {
+        // Create a final copy of the name variable for the lambda closure
+        // This is critical for RAP/web compatibility - each menu item needs its own copy
+        final String environmentName = name;
+        MenuItem item = new MenuItem(menu, SWT.NONE);
+        item.setText(environmentName);
+        // Match projects exactly - use addListener with lambda (projects work this way)
+        item.addListener(SWT.Selection, e -> selectEnvironment(environmentName));
+        if (currentEnvironmentName.equals(environmentName)) {
+          item.setImage(GuiResource.getInstance().getImageCheck());
+        }
+      }
+    }
+
+    return menu;
+  }
+
+  @GuiToolbarElement(
+      root = HopGui.ID_STATUS_TOOLBAR,
+      id = ID_TOOLBAR_ITEM_ENVIRONMENT,
+      type = GuiToolbarElementType.BUTTON,
+      image = "environment.svg",
+      toolTip = "i18n::HopGui.Toolbar.Environment.Tooltip")
+  public void showEnvironmentContextMenu() {
+    Control control =
+        HopGui.getInstance()
+            .getStatusToolbarWidgets()
+            .getControlForMenu(ID_TOOLBAR_ITEM_ENVIRONMENT);
+    if (control != null && !control.isDisposed()) {
+      Rectangle rect = control.getBounds();
+      int menuGap = 6;
+      Point location =
+          control.getParent().toDisplay(new Point(rect.x, rect.y + rect.height + menuGap));
+      Menu menu = createEnvironmentContextMenu();
+      menu.setLocation(location);
+      menu.setVisible(true);
+    }
+  }
+
+  public void selectProject() {
+    List<String> projectNames = ProjectsConfigSingleton.getConfig().listProjectConfigNames();
+    projectNames.sort(String::compareToIgnoreCase);
+
+    String[] projects = projectNames.toArray(new String[0]);
+
+    EnterSelectionDialog dialog =
+        new EnterSelectionDialog(
+            HopGui.getInstance().getActiveShell(),
+            projects,
+            BaseMessages.getString(PKG, "ProjectGuiPlugin.Dialog.AvailableProjects.Title"),
+            BaseMessages.getString(PKG, "ProjectGuiPlugin.Dialog.AvailableProjects.Message"));
+
+    String currentProject = HopNamespace.getNamespace();
+    dialog.setCurrentValue(currentProject);
+    int index = Const.indexOfString(currentProject, projects);
+    if (index >= 0) {
+      dialog.setSelectedNrs(
+          new int[] {
+            index,
+          });
+    }
+
+    String name = dialog.open();
+    if (name != null) {
+      selectProject(name);
+    }
+  }
+
+  public void selectProject(String projectName) {
+    HopGui hopGui = HopGui.getInstance();
+
+    ProjectsConfig config = ProjectsConfigSingleton.getConfig();
     if (config.isEnvironmentsForActiveProject() && StringUtils.isEmpty(projectName)) {
       // list all environments and select the first one if we don't have a project selected
       List<String> allEnvironments = config.listEnvironmentNames();
-      environmentsCombo.setItems(allEnvironments.toArray(new String[0]));
-      selectEnvironmentInList(allEnvironments.get(0));
+      updateEnvironmentToolItem(allEnvironments.getFirst());
       return;
     }
 
     ProjectConfig projectConfig = config.findProjectConfig(projectName);
-
-    if (config.isEnvironmentsForActiveProject()) {
-      // get the environments for the selected project.
-      if (environmentsCombo != null) {
-        List<String> projectEnvironments = config.listEnvironmentNamesForProject(projectName);
-        environmentsCombo.setItems(projectEnvironments.toArray(new String[0]));
-      }
-    } else {
-      List<String> projectEnvironments = config.listEnvironmentNames();
-      environmentsCombo.setItems(projectEnvironments.toArray(new String[0]));
+    if (projectConfig == null) {
+      return;
     }
 
     // What is the last used environment?
@@ -525,12 +874,12 @@ public class ProjectsGuiPlugin {
       LogChannel.UI.logError("Error reading the last used environment from the audit logs", e);
     }
 
-    // If there is no recent usage select the first environment.
+    // If there is no recent usage, select the first environment.
     //
     if (environment == null) {
       List<LifecycleEnvironment> environments = config.findEnvironmentsOfProject(projectName);
       if (!environments.isEmpty()) {
-        environment = environments.get(0);
+        environment = environments.getFirst();
       }
     }
 
@@ -542,6 +891,21 @@ public class ProjectsGuiPlugin {
         hopGui.getLog().logError("Unable to find project '" + projectName + "'");
       }
     } catch (Exception e) {
+      MissingProjectInfo missing = extractMissingProjectInfo(e);
+      if (missing != null) {
+        String displayName = missing.projectName != null ? missing.projectName : projectName;
+        MessageBox box = new MessageBox(hopGui.getShell(), SWT.OK | SWT.ICON_WARNING);
+        box.setMessage(
+            "Project '"
+                + displayName
+                + "' could not be loaded because "
+                + missing.path
+                + " no longer exists.\n\nYou can update the path in the Project configuration.");
+        box.setText("Project not available");
+        box.open();
+        selectProjectInUiOnly(projectName);
+        return;
+      }
       new ErrorDialog(
           hopGui.getActiveShell(),
           BaseMessages.getString(PKG, "ProjectGuiPlugin.ChangeProject.Error.Dialog.Header"),
@@ -551,21 +915,82 @@ public class ProjectsGuiPlugin {
     }
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_PROJECT_EDIT,
-      toolTip = "i18n::HopGui.Toolbar.Project.Edit.Tooltip",
-      image = "project-edit.svg")
-  public void editSelectedProject() {
-    editProject();
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_PROJECT,
+      parentId = ID_CONTEXT_MENU_PROJECT,
+      id = ID_CONTEXT_MENU_PROJECT_ADD,
+      label = "i18n::HopGui.Toolbar.Project.Add.Label",
+      toolTip = "i18n::HopGui.Toolbar.Project.Add.Tooltip",
+      image = "ui/images/add.svg")
+  public void addProjectMenu() {
+    // Cascade menu - no action, submenu opens on hover
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_PROJECT_ADD,
-      toolTip = "i18n::HopGui.Toolbar.Project.Add.Tooltip",
-      image = "project-add.svg")
-  public void addNewProject() {
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_PROJECT,
+      parentId = ID_CONTEXT_MENU_PROJECT_ADD,
+      id = ID_CONTEXT_MENU_PROJECT_ADD_FROM_VC,
+      label = "i18n::HopGui.Toolbar.Project.Add.FromVersionControl.Label",
+      toolTip = "i18n::HopGui.Toolbar.Project.Add.FromVersionControl.Tooltip")
+  public void addProjectFromVersionControl() {
+    addProjectFromVersionControlInternal();
+  }
+
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_PROJECT,
+      parentId = ID_CONTEXT_MENU_PROJECT_ADD,
+      id = ID_CONTEXT_MENU_PROJECT_ADD_FROM_EXISTING,
+      label = "i18n::HopGui.Toolbar.Project.Add.FromExisting.Label",
+      toolTip = "i18n::HopGui.Toolbar.Project.Add.FromExisting.Tooltip")
+  public void addProjectFromExistingSources() {
+    addProjectFromExistingSourcesInternal();
+  }
+
+  private void addProjectFromVersionControlInternal() {
+    try {
+      HopGui hopGui = HopGui.getInstance();
+      if (hopGui == null) {
+        LogChannel.GENERAL.logError("HopGui is not available");
+        return;
+      }
+      Shell shell = hopGui.getActiveShell();
+      if (shell == null) {
+        shell = hopGui.getShell();
+      }
+      if (shell == null) {
+        org.eclipse.swt.widgets.Display display = org.eclipse.swt.widgets.Display.getCurrent();
+        if (display != null) {
+          shell = display.getActiveShell();
+        }
+      }
+      if (shell == null || shell.isDisposed()) {
+        LogChannel.GENERAL.logError(
+            "No valid shell available for dialog. HopGui may not be fully initialized.");
+        return;
+      }
+      IVariables variables = hopGui.getVariables();
+      if (variables == null) {
+        variables = Variables.getADefaultVariableSpace();
+      }
+      CloneFromVersionControlDialog dialog = new CloneFromVersionControlDialog(shell, variables);
+      dialog.open();
+    } catch (Exception e) {
+      LogChannel.GENERAL.logError("Error opening 'Add project from version control' dialog", e);
+      HopGui hopGui = HopGui.getInstance();
+      if (hopGui != null) {
+        Shell shell = hopGui.getShell();
+        if (shell != null && !shell.isDisposed()) {
+          new ErrorDialog(
+              shell,
+              BaseMessages.getString(PKG, "ProjectGuiPlugin.AddProject.Error.Dialog.Header"),
+              BaseMessages.getString(PKG, "ProjectGuiPlugin.AddProject.Error.Dialog.Message"),
+              e);
+        }
+      }
+    }
+  }
+
+  private void addProjectFromExistingSourcesInternal() {
     HopGui hopGui = HopGui.getInstance();
     IVariables variables = hopGui.getVariables();
 
@@ -604,8 +1029,7 @@ public class ProjectsGuiPlugin {
           project.readFromFile();
         }
 
-        refreshProjectsList();
-        selectProjectInList(projectName);
+        updateProjectToolItem(projectName);
 
         enableHopGuiProject(projectName, project, null);
 
@@ -692,17 +1116,17 @@ public class ProjectsGuiPlugin {
     }
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_PROJECT_DELETE,
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_PROJECT,
+      parentId = ID_CONTEXT_MENU_PROJECT,
+      id = ID_CONTEXT_MENU_PROJECT_DELETE,
+      label = "i18n::HopGui.Toolbar.Project.Delete.Label",
       toolTip = "i18n::HopGui.Toolbar.Project.Delete.Tooltip",
-      image = "project-delete.svg")
-  public void deleteSelectedProject() {
-    Combo combo = getProjectsCombo();
-    if (combo == null) {
-      return;
-    }
-    String projectName = combo.getText();
+      image = "ui/images/delete.svg")
+  public void deleteProject() {
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String projectName =
+        HopGui.getInstance().getStatusToolbarWidgets().getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT);
     if (StringUtils.isEmpty(projectName)) {
       return;
     }
@@ -768,11 +1192,10 @@ public class ProjectsGuiPlugin {
         config.removeProjectConfig(projectName);
         ProjectsConfigSingleton.saveConfig();
 
-        refreshProjectsList();
         if (StringUtils.isEmpty(config.getDefaultProject())) {
-          selectProjectInList(null);
+          updateProjectToolItem(null);
         } else {
-          selectProjectInList(config.getDefaultProject());
+          updateProjectToolItem(config.getDefaultProject());
         }
       } catch (Exception e) {
         new ErrorDialog(
@@ -785,30 +1208,29 @@ public class ProjectsGuiPlugin {
     }
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_ENVIRONMENT_LABEL,
-      type = GuiToolbarElementType.LABEL,
-      label = "i18n::HopGui.Toolbar.Environment.Label",
-      toolTip = "i18n::HopGui.Toolbar.Environment.Tooltip",
-      separator = true)
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_ENVIRONMENT,
+      parentId = ID_CONTEXT_MENU_ENVIRONMENT,
+      id = ID_CONTEXT_MENU_ENVIRONMENT_EDIT,
+      label = "i18n::HopGui.Toolbar.Environment.Edit.Label",
+      toolTip = "i18n::HopGui.Toolbar.Environment.Edit.Tooltip",
+      image = "ui/images/edit.svg")
   public void editEnvironment() {
-    HopGui hopGui = HopGui.getInstance();
-    Combo combo = getEnvironmentsCombo();
-    if (combo == null) {
-      return;
-    }
     ProjectsConfig config = ProjectsConfigSingleton.getConfig();
-
-    String environmentName = combo.getText();
-    if (StringUtils.isEmpty(environmentName)) {
-      return;
-    }
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String environmentName =
+        HopGui.getInstance()
+            .getStatusToolbarWidgets()
+            .getToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT);
     LifecycleEnvironment environment = config.findEnvironment(environmentName);
-    if (environment == null) {
-      return;
+    if (environment != null) {
+      this.editEnvironment(environment);
     }
+  }
 
+  public void editEnvironment(LifecycleEnvironment environment) {
+    HopGui hopGui = HopGui.getInstance();
+    ProjectsConfig config = ProjectsConfigSingleton.getConfig();
     try {
       LifecycleEnvironmentDialog dialog =
           new LifecycleEnvironmentDialog(
@@ -817,9 +1239,7 @@ public class ProjectsGuiPlugin {
         config.addEnvironment(environment);
         ProjectsConfigSingleton.saveConfig();
 
-        refreshEnvironmentsList();
-
-        selectEnvironmentInList(environmentName);
+        updateEnvironmentToolItem(environment.getName());
       }
 
       // A refresh of the project and environment is likely needed
@@ -828,34 +1248,19 @@ public class ProjectsGuiPlugin {
       if (dialog.isNeedingEnvironmentRefresh() && askAboutProjectRefresh(hopGui)) {
         // Refresh the loaded environment
         //
-        selectEnvironment();
+        selectEnvironment(environment.getName());
       }
     } catch (Exception e) {
       new ErrorDialog(
           hopGui.getActiveShell(),
           BaseMessages.getString(PKG, "ProjectGuiPlugin.EditEnvironment.Error.Dialog.Header"),
           BaseMessages.getString(
-              PKG, "ProjectGuiPlugin.EditEnvironment.Error.Dialog.Message", environmentName),
+              PKG, "ProjectGuiPlugin.EditEnvironment.Error.Dialog.Message", environment.getName()),
           e);
     }
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_ENVIRONMENT_COMBO,
-      type = GuiToolbarElementType.COMBO,
-      comboValuesMethod = "getEnvironmentsList",
-      extraWidth = 200,
-      toolTip = "i18n::HopGui.Toolbar.EnvironmentsList.Tooltip",
-      readOnly = true)
-  public void selectEnvironment() {
-    HopGui hopGui = HopGui.getInstance();
-    Combo envCombo = getEnvironmentsCombo();
-    if (envCombo == null) {
-      return;
-    }
-
-    String environmentName = envCombo.getText();
+  public void selectEnvironment(String environmentName) {
     if (StringUtils.isEmpty(environmentName)) {
       return;
     }
@@ -864,22 +1269,27 @@ public class ProjectsGuiPlugin {
     if (environment == null) {
       return;
     }
-    if (StringUtils.isEmpty(environment.getProjectName())) {
-      return;
+    String projectName = environment.getProjectName();
+    if (StringUtils.isEmpty(projectName)) {
+      // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+      projectName =
+          HopGui.getInstance()
+              .getStatusToolbarWidgets()
+              .getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT);
     }
-    ProjectConfig projectConfig = config.findProjectConfig(environment.getProjectName());
+    ProjectConfig projectConfig = config.findProjectConfig(projectName);
     if (projectConfig == null) {
       return;
     }
 
     try {
-      Project project = projectConfig.loadProject(hopGui.getVariables());
+      Project project = projectConfig.loadProject(HopGui.getInstance().getVariables());
       if (project != null) {
         enableHopGuiProject(projectConfig.getProjectName(), project, environment);
       }
     } catch (Exception e) {
       new ErrorDialog(
-          hopGui.getActiveShell(),
+          HopGui.getInstance().getActiveShell(),
           BaseMessages.getString(PKG, "ProjectGuiPlugin.ChangeEnvironment.Error.Dialog.Header"),
           BaseMessages.getString(
               PKG, "ProjectGuiPlugin.ChangeEnvironment.Error.Dialog.Message", environmentName),
@@ -887,25 +1297,22 @@ public class ProjectsGuiPlugin {
     }
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_ENVIRONMENT_EDIT,
-      toolTip = "i18n::HopGui.Toolbar.Environment.Edit.Tooltip",
-      image = "environment-edit.svg")
-  public void editSelectedEnvironment() {
-    editEnvironment();
-  }
-
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_ENVIRONMENT_ADD,
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_ENVIRONMENT,
+      parentId = ID_CONTEXT_MENU_ENVIRONMENT,
+      id = ID_CONTEXT_MENU_ENVIRONMENT_ADD,
+      label = "i18n::HopGui.Toolbar.Environment.Add.Label",
       toolTip = "i18n::HopGui.Toolbar.Environment.Add.Tooltip",
-      image = "environment-add.svg")
+      image = "ui/images/add.svg")
   public void addNewEnvironment() {
     HopGui hopGui = HopGui.getInstance();
     try {
       ProjectsConfig config = ProjectsConfigSingleton.getConfig();
-      String projectName = getProjectsCombo().getText(); // The default is the active project
+      // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+      String projectName =
+          HopGui.getInstance()
+              .getStatusToolbarWidgets()
+              .getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT); // The default is the active project
 
       LifecycleEnvironment environment =
           new LifecycleEnvironment(null, "", projectName, new ArrayList<>());
@@ -917,8 +1324,7 @@ public class ProjectsGuiPlugin {
         config.addEnvironment(environment);
         ProjectsConfigSingleton.saveConfig();
 
-        refreshEnvironmentsList();
-        selectEnvironmentInList(environmentName);
+        updateEnvironmentToolItem(environmentName);
 
         ProjectConfig projectConfig = config.findProjectConfig(projectName);
         if (projectConfig != null) {
@@ -935,18 +1341,44 @@ public class ProjectsGuiPlugin {
     }
   }
 
-  @GuiToolbarElement(
-      root = HopGui.ID_MAIN_TOOLBAR,
-      id = ID_TOOLBAR_ENVIRONMENT_DELETE,
-      toolTip = "i18n::HopGui.Toolbar.Environment.Delete.Tooltip",
-      image = "environment-delete.svg")
-  public void deleteSelectedEnvironment() {
-    HopGui hopGui = HopGui.getInstance();
-    Combo combo = getEnvironmentsCombo();
-    if (combo == null) {
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_ENVIRONMENT,
+      parentId = ID_CONTEXT_MENU_ENVIRONMENT,
+      id = ID_CONTEXT_MENU_ENVIRONMENT_DUPLICATE,
+      label = "i18n::HopGui.Toolbar.Environment.Duplicate.Label",
+      toolTip = "i18n::HopGui.Toolbar.Environment.Duplicate.Tooltip",
+      image = "ui/images/duplicate.svg")
+  public void duplicateEnvironment() {
+    ProjectsConfig config = ProjectsConfigSingleton.getConfig();
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String environmentName =
+        HopGui.getInstance()
+            .getStatusToolbarWidgets()
+            .getToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT);
+    LifecycleEnvironment environment = config.findEnvironment(environmentName);
+    if (environment == null) {
       return;
     }
-    String environmentName = combo.getText();
+
+    LifecycleEnvironment newEnvironment = new LifecycleEnvironment(environment);
+    newEnvironment.setName(null);
+    this.editEnvironment(newEnvironment);
+  }
+
+  @GuiMenuElement(
+      root = ID_CONTEXT_MENU_ENVIRONMENT,
+      parentId = ID_CONTEXT_MENU_ENVIRONMENT,
+      id = ID_CONTEXT_MENU_ENVIRONMENT_DELETE,
+      label = "i18n::HopGui.Toolbar.Environment.Delete.Label",
+      toolTip = "i18n::HopGui.Toolbar.Environment.Delete.Tooltip",
+      image = "ui/images/delete.svg")
+  public void deleteEnvironment() {
+    HopGui hopGui = HopGui.getInstance();
+    // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+    String environmentName =
+        HopGui.getInstance()
+            .getStatusToolbarWidgets()
+            .getToolbarItemText(ID_TOOLBAR_ITEM_ENVIRONMENT);
     if (StringUtils.isEmpty(environmentName)) {
       return;
     }
@@ -958,8 +1390,7 @@ public class ProjectsGuiPlugin {
       return;
     }
 
-    MessageBox box =
-        new MessageBox(HopGui.getInstance().getShell(), SWT.YES | SWT.NO | SWT.ICON_QUESTION);
+    MessageBox box = new MessageBox(hopGui.getShell(), SWT.YES | SWT.NO | SWT.ICON_QUESTION);
     box.setText(BaseMessages.getString(PKG, "ProjectGuiPlugin.DeleteEnvironment.Dialog.Header"));
     box.setMessage(
         BaseMessages.getString(
@@ -972,20 +1403,24 @@ public class ProjectsGuiPlugin {
     int answer = box.open();
     if ((answer & SWT.YES) != 0) {
       try {
-        String projectName = getProjectsCombo().getText(); // The default is the active project
+        // Use getToolbarItemText() for RAP compatibility (text is stored in Label, not ToolItem)
+        String projectName =
+            HopGui.getInstance()
+                .getStatusToolbarWidgets()
+                .getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT); // The default is the active project
         ProjectConfig projectConfig = config.findProjectConfig(projectName);
         Project project = projectConfig.loadProject(hopGui.getVariables());
 
         config.removeEnvironment(environmentName);
         ProjectsConfigSingleton.saveConfig();
 
-        refreshEnvironmentsList();
-        selectEnvironmentInList(null);
-        enableHopGuiProject(
-            projectName, project, null); // Reload the project to clear current variables
+        updateEnvironmentToolItem(null);
+
+        // Reload the project to clear current variables
+        enableHopGuiProject(projectName, project, null);
       } catch (Exception e) {
         new ErrorDialog(
-            HopGui.getInstance().getShell(),
+            hopGui.getShell(),
             BaseMessages.getString(PKG, "ProjectGuiPlugin.DeleteEnvironment.Error.Dialog.Header"),
             BaseMessages.getString(
                 PKG, "ProjectGuiPlugin.DeleteEnvironment.Error.Dialog.Message", environmentName),
@@ -995,7 +1430,7 @@ public class ProjectsGuiPlugin {
   }
 
   /**
-   * Called by the Combo in the toolbar
+   * Called by the menu in the toolbar
    *
    * @param log the current logchannel
    * @param metadataProvider
@@ -1006,10 +1441,8 @@ public class ProjectsGuiPlugin {
       throws Exception {
     List<String> names = ProjectsConfigSingleton.getConfig().listProjectConfigNames();
     Map<String, Date> lastUsedMap = new HashMap<>();
-    names.stream()
-        .forEach(
-            name ->
-                lastUsedMap.put(name, new GregorianCalendar(1900, Calendar.JANUARY, 1).getTime()));
+    names.forEach(
+        name -> lastUsedMap.put(name, new GregorianCalendar(1900, Calendar.JANUARY, 1).getTime()));
 
     // Get the list of events from the Audit Manager...
     //
@@ -1027,8 +1460,7 @@ public class ProjectsGuiPlugin {
 
     // Reverse sort by last used date of a project...
     //
-    Collections.sort(
-        names,
+    names.sort(
         (name1, name2) -> {
           int cmp = -lastUsedMap.get(name1).compareTo(lastUsedMap.get(name2));
           if (cmp == 0) {
@@ -1041,7 +1473,7 @@ public class ProjectsGuiPlugin {
   }
 
   /**
-   * Called by the environments Combo in the toolbar
+   * Called by the environment menu in the toolbar
    *
    * @param log
    * @param metadataProvider
@@ -1050,7 +1482,7 @@ public class ProjectsGuiPlugin {
     return ProjectsConfigSingleton.getConfig().listEnvironmentNames();
   }
 
-  // Add an e button to the file dialog browser toolbar
+  // Add a "Navigate to project home" button to the file dialog browser toolbar
   //
   @GuiToolbarElement(
       root = NAVIGATE_TOOLBAR_PARENT_ID,
@@ -1099,12 +1531,8 @@ public class ProjectsGuiPlugin {
     if (zipFilename == null) {
       return;
     }
-
-    Combo combo = getProjectsCombo();
-    if (combo == null) {
-      return;
-    }
-    String projectName = combo.getText();
+    String projectName =
+        HopGui.getInstance().getStatusToolbarWidgets().getToolbarItemText(ID_TOOLBAR_ITEM_PROJECT);
     if (StringUtils.isEmpty(projectName)) {
       return;
     }
