@@ -20,12 +20,13 @@ package org.apache.hop.neo4j.shared;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hop.core.Const;
 import org.apache.hop.core.encryption.Encr;
 import org.apache.hop.core.exception.HopConfigException;
@@ -101,10 +102,6 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
 
   @HopMetadataProperty private String maxTransactionRetryTime;
 
-  @HopMetadataProperty private boolean version4;
-
-  @HopMetadataProperty private String version4Variable;
-
   @HopMetadataProperty private boolean automatic;
 
   @HopMetadataProperty private String automaticVariable;
@@ -116,7 +113,6 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
     browserPort = "7474";
     protocol = "neo4j";
     manualUrls = new ArrayList<>();
-    version4 = true;
     automatic = true;
   }
 
@@ -140,8 +136,6 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
     this.connectionAcquisitionTimeout = source.connectionAcquisitionTimeout;
     this.connectionTimeout = source.connectionTimeout;
     this.maxTransactionRetryTime = source.maxTransactionRetryTime;
-    this.version4 = source.version4;
-    this.version4Variable = source.version4Variable;
     this.automatic = source.automatic;
     this.automaticVariable = source.automaticVariable;
     this.protocol = source.protocol;
@@ -209,8 +203,8 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
         // Do something with the session otherwise it doesn't test the connection
         //
         Result result = session.run("RETURN 0");
-        Record record = result.next();
-        Value value = record.get(0);
+        Record rec = result.next();
+        Value value = rec.get(0);
         int zero = value.asInt();
         assert (zero == 0);
       } catch (Exception e) {
@@ -291,7 +285,7 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
         && isUsingRouting(variables)
         && StringUtils.isNotEmpty(routingPolicyString)) {
       try {
-        url += "?policy=" + URLEncoder.encode(routingPolicyString, "UTF-8");
+        url += "?policy=" + URLEncoder.encode(routingPolicyString, StandardCharsets.UTF_8);
       } catch (Exception e) {
         LogChannel.GENERAL.logError(
             "Error encoding routing policy context '" + routingPolicyString + "' in connection URL",
@@ -412,13 +406,11 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
       Config config = configBuilder.build();
 
       Driver driver;
-      if (isUsingRouting(variables)) {
-        driver =
-            GraphDatabase.routingDriver(uris, AuthTokens.basic(realUsername, realPassword), config);
-      } else {
-        driver =
-            GraphDatabase.driver(uris.get(0), AuthTokens.basic(realUsername, realPassword), config);
-      }
+      // In Neo4j 5.x, routingDriver() was removed. Use driver() with neo4j:// URI scheme for
+      // routing
+      // The driver automatically handles routing when using neo4j:// scheme
+      driver =
+          GraphDatabase.driver(uris.get(0), AuthTokens.basic(realUsername, realPassword), config);
 
       // Verify connectivity at this point to ensure we're not being dishonest when testing
       //
@@ -768,22 +760,6 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
   }
 
   /**
-   * Gets version4
-   *
-   * @return value of version4
-   */
-  public boolean isVersion4() {
-    return version4;
-  }
-
-  /**
-   * @param version4 The version4 to set
-   */
-  public void setVersion4(boolean version4) {
-    this.version4 = version4;
-  }
-
-  /**
    * Gets usingEncryptionVariable
    *
    * @return value of usingEncryptionVariable
@@ -813,22 +789,6 @@ public class NeoConnection extends HopMetadataBase implements IHopMetadata {
    */
   public void setTrustAllCertificatesVariable(String trustAllCertificatesVariable) {
     this.trustAllCertificatesVariable = trustAllCertificatesVariable;
-  }
-
-  /**
-   * Gets version4Variable
-   *
-   * @return value of version4Variable
-   */
-  public String getVersion4Variable() {
-    return version4Variable;
-  }
-
-  /**
-   * @param version4Variable The version4Variable to set
-   */
-  public void setVersion4Variable(String version4Variable) {
-    this.version4Variable = version4Variable;
   }
 
   /**
